# snail_engine

./: .gitignore  CMakeLists.txt  engine_config.h.in  main.cpp
cmake_configs/: glm-config.cmake  sdl2-config.cmake  soil-config.cmake
engine/: CMakeLists.txt  Engine.cpp  Engine.h  filetypes.h  includes.h
engine/Ecs/: Component.h  EcsExecutor.cpp  EcsExecutor.h  Entity.cpp  Entity.h  ISystem.h  System.cpp  System.h
engine/Ecs/Components/: Acceleration.cpp  Acceleration.h  BulletCollidable.cpp  BulletCollidable.h  Cannon.cpp  Cannon.h  CollisionFrame.cpp  CollisionFrame.h  ComponentTypes.h  DespawnOutsideScreen.cpp  DespawnOutsideScreen.h  IncludeComponents.h  Player.cpp  Player.h  Position.cpp  Position.h  Projectile.cpp  Projectile.h  ProjectileCollidable.cpp  ProjectileCollidable.h  Shootable.cpp  Shootable.h  Size.cpp  Size.h  Velocity.cpp  Velocity.h
engine/Ecs/Systems/: ApplyAccelerationSystem.cpp  ApplyAccelerationSystem.h  ApplyVelocitySystem.cpp  ApplyVelocitySystem.h  AsteroidCollisionSystem.cpp  AsteroidCollisionSystem.h  AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  BulletCollisionSystem.cpp  BulletCollisionSystem.h  CheckCollisions.cpp  CheckCollisionsSystem.cpp  CheckCollisionsSystem.h  CollectInputSystem.cpp  CollectInputSystem.h  DespawnEntitiesSystem.cpp  DespawnEntitiesSystem.h  MoveCameraSystem.cpp  MoveCameraSystem.h  MovePlayerSystem.cpp  MovePlayerSystem.h  SpawnAsteroidSystem.cpp  SpawnAsteroidSystem.h  SpawnBulletSystem.cpp  SpawnBulletSystem.h  SpawnPlayerSystem.cpp  SpawnPlayerSystem.h
engine/Etc/: EntityIdGenerator.cpp  EntityIdGenerator.h  FloatHelper.cpp  FloatHelper.h  Rect.h  Singleton.h  Vector2.cpp  Vector2.h  singleton.h
engine/Events/: Event.h  EventPipeline.cpp  EventPipeline.h  EventTypes.h  InputEvent.cpp  InputEvent.h
engine/Game/: Camera.cpp  Camera.h  GameState.h  Map.cpp  Map.h
engine/Game/BinaryTree/: TreeNode.cpp  TreeNode.h  TreeRoot.cpp  TreeRoot.h
engine/Glad/glad/: glad.c  glad.h
engine/Graphics/: Color.cpp  Color.h  GLCacheManager.cpp  GLCacheManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h  WindowManager.cpp
engine/Graphics/Drawables/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  IDrawable.cpp  IDrawable.h  Spaceship.cpp  Spaceship.h  Triangle.cpp  Triangle.h
engine/Input/: IControlMappingsManager.h  IInputManager.h  IKeystroke.h  InputEventConfig.cpp  InputEventConfig.h  InputManager.cpp  InputManager.h  KeyEnums.h  KeyStroke.cpp  KeyStroke.h  PlayerActions.h
engine/Interfaces/Input/: IKeystroke.h
engine/Managers/: StateManager.cpp  StateManager.h  WindowManager.cpp  WindowManager.h
engine/States/: IState.h  State.h  StateManager.cpp  TestState.cpp  TestState.h
game/: CMakeLists.txt
game/Ecs/Components/: Acceleration.cpp  Acceleration.h  Mass.cpp  Mass.h
game/Ecs/Entities/: Asteroid.cpp  Asteroid.h  Bullet.cpp  IDrawable.cpp  IDrawable.h  Spaceship.cpp  Spaceship.h
game/Ecs/Systems/: ApplyVelocitySystem.cpp  AsteroidSpawnSystem.cpp  AsteroidSpawnSystem_1.h  CheckCollisions.h  CollectInputSystem.h  MoveCameraSystem.cpp  MovePlayerSystem.cpp  MovePlayerSystem.h  SpawnBulletSystem.cpp  SpawnBulletSystem.h
resources/Shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl
